--- a/Project_0/game.ipynb
+++ b/Project_0/game.ipynb
@@ -9,9 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
-    "from game_v2 import score_game\n",
+    "from game_v2 import score_game\r\n",
     "from game_v2 import random_predict"
    ],
    "outputs": [],
@@ -20,13 +20,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Угадываем рандомно"
+    "## Находим загаданное число"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
     "score_game(random_predict)"
    ],
@@ -35,18 +35,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за:101 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за:5 попыток\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "101"
+       "5"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -62,7 +62,23 @@
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.11",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('dt78': conda)"
+  },
+  "interpreter": {
+   "hash": "7e97347a68222f5dcb6f73c347edbbb2edcac6a868bc461d5b9188b4eb695abb"
   }
  },
  "nbformat": 4,
